--- a/week29/src/components/Counter.css
+++ b/week29/src/components/Counter.css
@@ -1,5 +1,5 @@
 .btn {
-    background-color: #4CAF50; 
+    background-color: #d526c9; 
     border: none;
     color: white;
     padding: 15px 32px;
